# scientific-python-showcase

./: .gitignore  LICENSE  README.md  pyproject.toml
demos/: run_atmosphere_demo.py  run_rk4_demo.py  run_trilateration_demo.py
lib/: system.py
scripts/atmosphere/: atmosphere_model.py
scripts/estimation/: trilateration.py
scripts/orbits/: numerisk_bane_integrasjon.py  numerisk_bane_plot.py
scripts/spectral/: spectral_analysis.py  spectral_data.py
src/pnshowcase/: __init__.py
src/pnshowcase/estimation/: Trilateration.py  __init__.py
src/pnshowcase/models/: __init__.py  atmosphere_model.py
src/pnshowcase/numerics/: Numerisk_bane_integrasjon.py  __init__.py  utils.py
src/pnshowcase/plotting/: num_bane_test.py  numerisk_bane_plot.py
src/pnshowcase/stats/: spectral_analisys.py
tests/: __init__.py  test_rk4.py
